# futebol-preditor

./: .gitignore  Dockerfile  README.md  mytree.md  pyproject.toml  requirements.txt
backend/models/: target_encoder.pkl  team_encoder.pkl
backend/src/: ingestion.py
data/processed/: base_dados_site.csv
frontend/: app.py
notebooks/: 01_eda_inicial.ipynb
src/: inference.py  training.py
