[project]
name = "futebol-preditor"
version = "0.1.0"
description = "Futebol Predictor Streamlit App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0"
]

[tool.uv]
dev-dependencies = []
